src/style/skill.css
.skill-img {
  width: 50px;
  height: 50px;
  margin-bottom: 10px;
}

.skill {
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

.skills {
  grid-template-columns: repeat(3, 1fr);
  gap: 25px;
}

.skill-container,
.skill-section,
.skill-box {
  display: grid;
}

.skill-container {
  place-items: center;
  padding: 5rem;
}

.skill-section {
  grid-template-columns: repeat(3, 1fr);
  margin-inline: auto;
  gap: 3rem;
}

.skill-box {
  grid-template-rows: 60px 1fr;
  gap: 1rem;

  h1 {
    text-align: center;
  }
}

@media (max-width: 1300px) {
  .skill-section {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 768px) {
  .skill-section {
    grid-template-columns: repeat(1, 1fr);
  }
}

